# Inf2Pacman

./: .gitignore  CMakeLists.txt  DokumentaionLorin.docx  Leaderboard.txt  Mappe1.xlsx  build.ps1  launch-befehle.txt  leaderboard.txt  main.cpp  pacman
documentation/: Dokumentation1879167.docx  Dokumentation4799472.docx  DokumentationGemeinsam.docx  DokumentationLorinMeub.docx  Dokumentation_Gemeinsam.docx  KIHinweisblattLorinMeub.docx  Klassendiagramm.drawio  Mappe1.xlsx
src/: Coin.cpp  Coin.h  Constants.h  Element.cpp  Element.h  Entity.cpp  Entity.h  Fruit.cpp  Fruit.h  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  GameCharacter.cpp  GameCharacter.h  GameController.cpp  GameController.h  Ghost.cpp  Ghost.h  GridPoint.cpp  GridPoint.h  Leaderboard.cpp  Leaderboard.h  MazeCell.h  PacMan.cpp  PacMan.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Score.cpp  Score.h  Wall.cpp  Wall.h  main.cpp
